Center ingredients, improve margins, fix the tags wrap bug, add padding to the image, adjust responsivity

--- a/src/styles/CocktailDetailsPage.css
+++ b/src/styles/CocktailDetailsPage.css
@@ -1,16 +1,13 @@
 /* Details Page */
-
-
 .details-page {
   margin-left: 5rem;
   margin-right: 5rem;
+  padding-bottom: 3rem;
 }
-
 
 .cocktail-details {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  /* grid-template-columns: auto 1fr; */
   grid-template-rows: auto;
   text-align: start;
   gap: 2rem;
@@ -22,113 +19,95 @@
   box-shadow: none;
 }
 
-.details-text {
+.details-title-container {
   padding: 2rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-
 }
 
-/* displays the card as an image only */
+
+/* Card as an image only */
 .details-page .card {
   position: relative;
   background-color: transparent;
   transition: none;
   box-shadow: none;
-  padding: 0 0 30px 0;
+  padding: 0.5rem 0.5rem 2rem 0.5rem;
   border: none;
   margin: 0;
   align-items: start;
-
-  h3 {
-    visibility: hidden;
-  }
-
-  img {
-    height: auto;
-    width: 100%;
-    border-radius: 10px 0 15px 0;
-    margin: 0;
-
-  }
+  overflow: hidden; 
 }
-
+.details-page .card img {
+  height: auto;
+  width: 100%;
+  margin: 1rem;
+  border-radius: 15px; 
+}
+.details-page .card h3 {
+  visibility: hidden;
+}
 .details-page .card:hover {
   transform: none;
   box-shadow: none;
 }
-
 .details-page .favorite-icon {
   position: absolute;
   bottom: 5px;
+  padding: 1rem;
   align-self: flex-end;
 }
-
 .favorite-icon svg {
   font-size: 2rem;
-
 }
-
 .tags {
   margin-left: 1rem;
   margin-right: 1rem;
   padding: 0.2rem;
-  gap: 1rem;
-  display: inline-block;
   display: flex;
-  gap: 0.5rem; 
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-
 .tag {
   background-color: rgba(255, 123, 0, 0.151);
   padding: 0.1rem 0.3rem;
-  display: inline-block; 
+  display: inline-block;
 }
-
 
 
 /* Container holding the title and category */
-.details-text>div {
+.details-title-container>div {
   text-align: center;
   margin-bottom: 20px;
 }
-
 .title-separator {
   width: 40%;
   margin: 0 auto;
   border: 0;
   border-top: 1px solid var(--accent-red);
 }
-
-
 .category {
   font-size: 18px;
   font-weight: 500;
   display: inline-block;
   margin-top: 5px;
 }
-
 .title {
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 0;
   padding-bottom: 3px;
-  margin-bottom: 0;
-  padding-bottom: 3px;
 }
-
 .details-tags {
   display: flex;
   gap: 1rem;
 }
-
-
 .details-info {
   margin-top: 15px;
   font-size: 16px;
 }
-
 .details-info p {
   margin: 5px 0;
 }
@@ -139,19 +118,22 @@
   width: 40%;
   display: grid;
   grid-template-columns: 4fr 1fr;
-  margin-top: 10px;
+  margin: 10px auto;
+  justify-content: center;
 }
 
+.ingredients h3 {
+  margin-bottom: 10px;
+  text-align: center;
+}
 
 .ingredient-link {
   color: #000;
-
   display: block;
   cursor: pointer;
   text-decoration: none;
   margin: 5px 0;
   font-weight: 500;
-
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -163,7 +145,6 @@
   text-decoration: none;
 }
 
-
 .measure {
   text-align: right;
   color: #666;
@@ -171,122 +152,41 @@
   white-space: nowrap;
 }
 
+
+/* Instructions section */
 .instructions {
   margin-top: 20px;
+  text-align: center;
 }
 
 .instructions h3 {
   margin-bottom: 10px;
 }
-
-.ingredients h3 {
-  margin-bottom: 10px;
-}
-
-
-.details-info {
-  margin-top: 15px;
-  font-size: 16px;
-}
-
-.details-info p {
-  margin: 5px 0;
-}
-
-
-
-
-
-
-.details-info {
-  margin-top: 15px;
-  font-size: 16px;
-}
-
-.details-info p {
-  margin: 5px 0;
-}
-
-/* Ingredient section */
-.ingredients-grid {
-  max-width: 500px;
-  width: 40%;
-  display: grid;
-  grid-template-columns: 4fr 1fr;
-  margin-top: 10px;
-}
-
-
-.ingredient-link {
-  color: #000;
-
-  display: block;
-  cursor: pointer;
-  text-decoration: none;
-  margin: 5px 0;
-  font-weight: 500;
-
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.ingredient-link:hover {
-  font-weight: 700;
-  color: #615f5f;
-  text-decoration: none;
-}
-
-
-.measure {
-  text-align: right;
-  color: #666;
-  font-weight: 500;
-  white-space: nowrap;
-}
-
-.instructions {
-  margin-top: 20px;
-}
-
-.instructions h3 {
-  margin-bottom: 10px;
-}
-
-.ingredients h3 {
-  margin-bottom: 10px;
-}
-
-
-.details-info {
-  margin-top: 15px;
-  font-size: 16px;
-}
-
-.details-info p {
-  margin: 5px 0;
-}
-
-
-
-
-
 
 
 /* Responsive styles */
-
 /* ---------------------------------------------------------------------------------- */
 @media (max-width: 1024px) {
   .cocktail-details {
     grid-template-columns: 1fr;
+    
   }
-
-  .details-text {
+  .details-page .card {
+    padding: 1rem 8rem 4rem 6rem;
+    margin: 0;
+  }
+  .details-page .favorite-icon {
+    bottom: 1px;
+    left: 50%;
+    transform: translateX(-50%);
+    align-self: flex-start;
+  }
+  .details-title-container {
     padding: 1.5rem;
   }
-
-  .details-tags {
-    gap: 0.8rem;
+  .tags {
+    justify-content: center;
+    align-items: center; 
   }
 }
 
@@ -294,8 +194,18 @@
   .cocktail-details {
     grid-template-columns: 1fr;
   }
-
-  .details-text {
+  .details-page .card {
+    padding: 1rem 4rem 4rem 2rem;
+    margin: 0;
+  }
+  .details-page .favorite-icon {
+    position: absolute;
+    bottom: 1px;
+    left: 50%;
+    transform: translateX(-50%); 
+    align-self: flex-start;
+  }
+  .details-title-container {
     padding: 1rem;
   }
 
@@ -315,15 +225,6 @@
   .ingredient-link {
     white-space: normal;
   }
-
-  .ingredients-grid {
-    width: 80%;
-    grid-template-columns: 2fr 1fr;
-  }
-
-  .ingredient-link {
-    white-space: normal;
-  }
 }
 
 @media (max-width: 480px) {
@@ -331,13 +232,22 @@
     grid-template-columns: 1fr;
     gap: 1rem;
   }
-
-  .details-text {
+  .details-page .card {
+    padding: 0 2rem 1rem 0;
+    margin: 0;
+  }  
+  .details-page .favorite-icon {
+    bottom: 1px;
+    left: 50%;
+    transform: translateX(-50%);
+    align-self: flex-start;
+  }
+  .details-title-container {
     padding: 0.8rem;
     gap: 0.5rem;
   }
 
-  .title {
+  .title, h3 {
     font-size: 1.2rem;
   }
 
@@ -345,6 +255,9 @@
     flex-wrap: wrap;
     gap: 0.3rem;
   }
-}
 
+  .ingredients-grid {
+    width: 100%;
+  }
+}
 /* ---------------------------------------------------------------------------------- */
